--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <!-- Header -->
+   <!-- Header -->
   <section id="header">
     <div class="header container">
       <div class="nav-bar">
